2014-08-15  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/62092
	* gimplify.c (gimplify_adjust_omp_clauses_1): Don't remove
	OMP_CLAUSE_SHARED for global vars if the global var is mentioned
	in OMP_CLAUSE_MAP in some outer target region.

2014-08-15  Bin Cheng  <bin.cheng@arm.com>

	* tree-ssa-loop-ivopts.c (ivopts_data): New field
	name_expansion_cache.
	(tree_ssa_iv_optimize_init): Initialize name_expansion_cache.
	(tree_ssa_iv_optimize_finalize): Free name_expansion_cache.
	(strip_wrap_conserving_type_conversions, expr_equal_p): Delete.
	(difference_cannot_overflow_p): New parameter.  Use affine
	expansion for equality check.
	(iv_elimination_compare_lt): Pass new argument.

2014-08-14  DJ Delorie  <dj@redhat.com>

	* config/rl78/rl78-real.md (addqi3_real): Allow adding global
	variables to the accumulator.

	* config/rl78/predicates.md (rl78_near_mem_operand): New.
	* config/rl78/rl78-virt.md (movqi_virt_mm, movqi_virt)
	(movhi_virt_mm): Split out near mem-mem moves to avoid problems
	with far-far moves.

	* config/rl78/rl78-expand.md (umulqihi3): Disable for G10.
	* config/rl78/rl78-virt.md (umulhi3_shift_virt): Likewise.
	(umulqihi3_virt): Likewise.
	* config/rl78/rl78-real.md (umulhi3_shift_real): Likewise.
	(umulqihi3_real): Likewise.

	* config/rl78/rl78-virt.md (movhi_virt): Allow const->far moves.

2014-08-14  Jan Hubicka  <hubicka@ucw.cz>

	PR tree-optimization/62091
	* tree-ssa-alias.c (walk_aliased_vdefs_1): Do not clear
	function_entry_reached.
	(walk_aliased_vdefs): Clear it here.
	* ipa-devirt.c (check_stmt_for_type_change): Handle static storage.

2014-08-14  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-utils.h (compare_virtual_tables): Declare.
	* ipa-devirt.c (odr_subtypes_equivalent_p): New function

2014-08-14  Marek Polacek  <polacek@redhat.com>

	DR 458
	* ginclude/stdatomic.h (__atomic_type_lock_free): Remove.
	(ATOMIC_*_LOCK_FREE): Map to __GCC_ATOMIC_*_LOCK_FREE.

2014-08-14  Tom de Vries  <tom@codesourcery.com>
