@@ -1,3 +1,8 @@
+2014-08-15  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/62031
+	* gcc.dg/torture/pr62031.c: New testcase.
+
 2014-08-15  Bin Cheng  <bin.cheng@arm.com>
 
 	* gcc.dg/tree-ssa/ivopts-lt-2.c: New test.
